--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <title>HTML Elements</title>
   <style>
     
+    table.my-table {
+         border-collapse: collapse;
+       }
        table.my-table th {
          background-color: #54585d;
          color: #ffffff;
