HTML to Styling_with-CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head> 
   <meta name="viewport" content="width=device-width">
-  <title>HTML Elements</title>
+  <title>Stylin_with-CSS</title>
   <style>
     
     table.my-table {
