--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
     <link rel="Stylesheet" href="style.css">
 
 <head> 
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width">
   <title>Stylin_with_CSS</title>
   <style>
-    
+        html{
+          background-color:#ccc;
+        }
+        body {
+          font-family:Arial,sans-serif;
+          background-color:#fff;
+          max-width:960px;
+          width:90%;
+          margin: auto;
+          padding: 1%;
+        }
+        footer {
+          clear:both;
+          text-align:center;
+          }
+
     table.my-table {
          border-collapse: collapse;
        }
@@ -37,10 +53,10 @@
   </style>
 </head> 
 <body>
-  <h1>HTML Elements</h1>
-   <p>Clever content goes here</p>
-   <p>Clever content goes here</p>
-   <p>Clever content goes here</p>
+  <h1>Stylin' with CSS by Ernesto Martinez</h1>
+  <p>This page demonstrates how to create a look and feel on our pages using CSS.</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet scelerisque urna, vitae dictum lectus. Vestibulum a nisi in lorem rhoncus placerat non sed libero. Proin mollis massa ut ante accumsan facilisis. Etiam elementum neque vel neque faucibus, at sagittis eros imperdiet. Phasellus tincidunt aliquet nisi eget sagittis. Nam sit amet nulla non felis malesuada porttitor et at odio. Etiam ac diam dictum, sagittis felis mollis, lacinia tellus. Aliquam lobortis gravida massa, et feugiat velit convallis a. Sed gravida, ante at mattis auctor, tellus erat consequat velit, id tincidunt turpis est finibus mauris.</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet scelerisque urna, vitae dictum lectus. Vestibulum a nisi in lorem rhoncus placerat non sed libero. Proin mollis massa ut ante accumsan facilisis. Etiam elementum neque vel neque faucibus, at sagittis eros imperdiet. Phasellus tincidunt aliquet nisi eget sagittis. Nam sit amet nulla non felis malesuada porttitor et at odio. Etiam ac diam dictum, sagittis felis mollis, lacinia tellus. Aliquam lobortis gravida massa, et feugiat velit convallis a. Sed gravida, ante at mattis auctor, tellus erat consequat velit, id tincidunt turpis est finibus mauris.</p>
   <div>
     <ul>
       <li>Cookies</li>
@@ -83,8 +99,6 @@
         <th>Doe</th>
         <th>judy@doe.com</th>
       </tr>
-
-  
  </body>
 
 </html>
