--- a/index.html
+++ b/index.html
@@ -1,125 +1,152 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 
-<html> 
-  <meta charset="utf8">
-  <meta name="viewport" content="with-device-width">
-  <title> replit</title>
-    <link rel="Stylesheet" href="style.css">
+<html>
+  <meta charset="utf8" />
+  <meta name="viewport" content="with-device-width" />
+  <title>replit</title>
+  <link rel="Stylesheet" href="style.css" />
 
-<head> 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="viewport" content="width=device-width">
-  <title>Stylin_with_CSS</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap');
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Stylin_with_CSS</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap");
 
-        html{
-          background-color:#ccc;
-        }
-        body {
-          font-family:Arial,sans-serif;
-          background-color:#fff;
-          max-width:960px;
-          width:90%;
-          margin: auto;
-          padding: 1%;
-        }
-        .page-header{
-          background-color: rgb(102, 241, 241);
-          text-align: center;
-          font-family:'Inknut Antiqua',serif;
-          text-shadow: 4px 4px 4px;
-        }
-        table.my-table {
-         border-collapse: collapse;
-       }
-       table.my-table th {
-         background-color: #54585d;
-         color: #ffffff;
-         font-weight: bold;
-         font-size: 13px;
-         border: 1px solid #54585d;
-       }
-       table.my-table td {
-         padding: 15px;
-       }
-     table.my-table td {
-       color: #636363;
-       border: 1px solid #383c3f;
-     }
-     table.my-table tr {
-       background-color: #63aaf5;
-     }
-     table.my-table tr:nth-child(odd) {
-       background-color: #ffffff;
-     } 
-        nav{
-   text-align:center; /* centers the nav */
-}
+      html {
+        background-color: #ccc;
+      }
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #fff;
+        max-width: 960px;
+        width: 90%;
+        margin: auto;
+        padding: 1%;
+      }
+      .page-header {
+        background-color: rgb(102, 241, 241);
+        text-align: center;
+        font-family: "Inknut Antiqua", serif;
+        text-shadow: 4px 4px 4px #f12a2a;
+      }
+      table.my-table td:hover {
+        background-color: black;
+      }
+      table.my-table {
+        border-collapse: collapse;
+      }
+      table.my-table th {
+        background-color: #145fbb;
+        color: #ffffff;
+        font-weight: bold;
+        font-size: 13px;
+        border: 1px solid #54585d;
+      }
+      table.my-table td {
+        padding: 15px;
+      }
+      table.my-table td {
+        color: #636363;
+        border: 1px solid #383c3f;
+      }
+      table.my-table tr {
+        background-color: #63aaf5;
+      }
+      table.my-table tr:nth-child(odd) {
+        background-color: #ffffff;
+      }
+      nav {
+        text-align: center; /* centers the nav */
+      }
 
+      nav a {
+        color: #000; /* font color is black */
+      }
 
-nav a{
-   color:#000; /* font color is black */
-}
+      nav ul {
+        list-style: none; /* removes the bullets */
+      }
+      nav li {
+        display: inline-block; /* makes <li> horizontal, but able to declare margins */
+        margin: 0 2%; /* margin left-right, gets smaller as necessary */
+      }
+      nav a:hover {
+        text-decoration: none; /* default underline goes away on hover */
+      }
+      /* end nav rules */
+      footer {
+        text-align: center;
+        clear: both;
+      }
 
+      /* start nav rules */
+    </style>
+  </head>
+  <body>
+    <h1 class="page-header">Stylin' with CSS</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+        <li><a href="#">Link 4</a></li>
+        <li><a href="#">Link 5</a></li>
+      </ul>
+    </nav>
+    <p>
+      This page demonstrates how to create a look and feel on our pages using
+      CSS.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet
+      scelerisque urna, vitae dictum lectus. Vestibulum a nisi in lorem rhoncus
+      placerat non sed libero. Proin mollis massa ut ante accumsan facilisis.
+      Etiam elementum neque vel neque faucibus, at sagittis eros imperdiet.
+      Phasellus tincidunt aliquet nisi eget sagittis. Nam sit amet nulla non
+      felis malesuada porttitor et at odio. Etiam ac diam dictum, sagittis felis
+      mollis, lacinia tellus. Aliquam lobortis gravida massa, et feugiat velit
+      convallis a. Sed gravida, ante at mattis auctor, tellus erat consequat
+      velit, id tincidunt turpis est finibus mauris.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet
+      scelerisque urna, vitae dictum lectus. Vestibulum a nisi in lorem rhoncus
+      placerat non sed libero. Proin mollis massa ut ante accumsan facilisis.
+      Etiam elementum neque vel neque faucibus, at sagittis eros imperdiet.
+      Phasellus tincidunt aliquet nisi eget sagittis. Nam sit amet nulla non
+      felis malesuada porttitor et at odio. Etiam ac diam dictum, sagittis felis
+      mollis, lacinia tellus. Aliquam lobortis gravida massa, et feugiat velit
+      convallis a. Sed gravida, ante at mattis auctor, tellus erat consequat
+      velit, id tincidunt turpis est finibus mauris.
+    </p>
+    <div>
+      <ul>
+        <li>Cookies</li>
+        <li>Sushi</li>
+        <li>Seafood</li>
+      </ul>
+      <ol>
+        <li>Avengers</li>
+        <li>Spiderman</li>
+        <li>The Matrix</li>
+      </ol>
+    </div>
+    <div><img src="https://picsum.photos/200/300" /></div>
+    <div>
+      Pictures privided by
+      <a href="https://picsum.photos/" target="_blank"> Lorem Picsum</a>
+    </div>
 
-nav ul {
-   list-style:none; /* removes the bullets */
-}
-nav li
-{
-   display:inline-block; /* makes <li> horizontal, but able to declare margins */
-   margin:0 2%; /* margin left-right, gets smaller as necessary */
-}
-nav a:hover{
-   text-decoration: none; /* default underline goes away on hover */
-}
-/* end nav rules */
-        footer {
-          clear:both;
-          text-align:center;
-          }
-     
-     /* start nav rules */
-
-  </style>
-</head> 
-<body>
-  <h1 class="page-header">Stylin' with CSS</h1>
-  <nav>
-    <ul>
-      <li><a href="#">Link 1</a></li>
-      <li><a href="#">Link 2</a></li>
-      <li><a href="#">Link 3</a></li>
-      <li><a href="#">Link 4</a></li>
-      <li><a href="#">Link 5</a></li>
-    </ul>
-  </nav>
-  <p>This page demonstrates how to create a look and feel on our pages using CSS.</p>
-   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet scelerisque urna, vitae dictum lectus. Vestibulum a nisi in lorem rhoncus placerat non sed libero. Proin mollis massa ut ante accumsan facilisis. Etiam elementum neque vel neque faucibus, at sagittis eros imperdiet. Phasellus tincidunt aliquet nisi eget sagittis. Nam sit amet nulla non felis malesuada porttitor et at odio. Etiam ac diam dictum, sagittis felis mollis, lacinia tellus. Aliquam lobortis gravida massa, et feugiat velit convallis a. Sed gravida, ante at mattis auctor, tellus erat consequat velit, id tincidunt turpis est finibus mauris.</p>
-   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet scelerisque urna, vitae dictum lectus. Vestibulum a nisi in lorem rhoncus placerat non sed libero. Proin mollis massa ut ante accumsan facilisis. Etiam elementum neque vel neque faucibus, at sagittis eros imperdiet. Phasellus tincidunt aliquet nisi eget sagittis. Nam sit amet nulla non felis malesuada porttitor et at odio. Etiam ac diam dictum, sagittis felis mollis, lacinia tellus. Aliquam lobortis gravida massa, et feugiat velit convallis a. Sed gravida, ante at mattis auctor, tellus erat consequat velit, id tincidunt turpis est finibus mauris.</p>
-  <div>
-    <ul>
-      <li>Cookies</li>
-      <li>Sushi</li>
-      <li>Seafood</li>
-    </ul>
-    <ol>
-      <li>Avengers</li>
-      <li>Spiderman</li>
-      <li>The Matrix</li>
-    </ol>
-  </div>
-  <div><img src="https://picsum.photos/200/300"<img> 
-  </div>
-    <div>Pictures privided by <a href="https://picsum.photos/"target="_blank"> Lorem Picsum</a></div>
-  
-  <p>Here is how we use the <strong>strong</strong> tag </p>
-  <p>Here is how we use the <em>em</em> tag </p>
-  <p>Here is how we use the <i>italize</i> tag </p>
-  <p>Here is how we use the <b>strong</b> tag </p>
-  <div>Here is inside the div. <span style="background-color: yellow;"> Here we are inside a span </span></div>
-    <table class= "my table">
+    <p>Here is how we use the <strong>strong</strong> tag</p>
+    <p>Here is how we use the <em>em</em> tag</p>
+    <p>Here is how we use the <i>italize</i> tag</p>
+    <p>Here is how we use the <b>strong</b> tag</p>
+    <div>
+      Here is inside the div.
+      <span style="background-color: yellow"> Here we are inside a span </span>
+    </div>
+    <table class="my-table">
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
@@ -140,6 +167,7 @@ nav a:hover{
         <th>Doe</th>
         <th>judy@doe.com</th>
       </tr>
- </body>
-
+    </table>
+    <footer>Copyright &copy; 2024</footer>
+  </body>
 </html>
