--- a/index.html
+++ b/index.html
@@ -153,19 +153,19 @@
         <th>Email</th>
       </tr>
       <tr>
-        <th>Jane</th>
-        <th>Doe</th>
-        <th>Jane@doe.com</th>
+        <td>Jane</td>
+        <td>Doe</td>
+        <td>Jane@doe.com</td>
       </tr>
       <tr>
-        <th>Jhon</th>
-        <th>Doe</th>
-        <th>jhon@doe.com</th>
+        <td>Jhon</td>
+        <td>Doe</td>
+        <td>jhon@doe.com</td>
       </tr>
       <tr>
-        <th>judy</th>
-        <th>Doe</th>
-        <th>judy@doe.com</th>
+        <td>judy</td>
+        <td>Doe</td>
+        <td>judy@doe.com</td>
       </tr>
     </table>
     <footer>Copyright &copy; 2024</footer>
